@@ -1,6 +1,12 @@
 # ChangeLog for sci-biology/bowtie
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-biology/bowtie/ChangeLog,v 1.3 2009/05/02 23:48:39 weaver Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-biology/bowtie/ChangeLog,v 1.4 2009/06/21 15:15:43 weaver Exp $
+
+*bowtie-0.10.0 (21 Jun 2009)
+
+  21 Jun 2009; Andrey Kislyuk <weaver@gentoo.org> -bowtie-0.9.9.1.ebuild,
+  +bowtie-0.10.0.ebuild:
+  Version bump
 
 *bowtie-0.9.9.2 (02 May 2009)
 
